force-app/main/default/objects/Lab_Order_Panel__c/Lab_Order_Panel__c.object-meta.xml
<CustomObject>
    <label>Lab Order Panel</label>
    <nameField>
        <displayFormat>PNID- {000000000}</displayFormat>
        <label>Lab Panel ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Order Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>