force-app/main/default/objects/Lab_Order_Panel__c/fields/AOE__c.field-meta.xml
<CustomField>
    <fullName>AOE__c</fullName>
    <label>AOE</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>