force-app/main/default/objects/Lab_Order_Panel__c/fields/AOE_Formatted__c.field-meta.xml
<CustomField>
    <fullName>AOE_Formatted__c</fullName>
    <label>AOE</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>