force-app/main/default/objects/Lab_Order_Panel__c/fields/Check_for_Results__c.field-meta.xml
<CustomField>
    <fullName>Check_for_Results__c</fullName>
    <label>Check for Results</label>
    <summaryFilterItems>
        <field>Lab_Panel_Test__c.Check_for_Results__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Lab_Panel_Test__c.Lab_Order_Panel__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>