force-app/main/default/objects/Lab_Order_Panel__c/fields/EOST_Performing_Site__c.field-meta.xml
<CustomField>
    <fullName>EOST_Performing_Site__c</fullName>
    <label>EOST PerformingSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>