force-app/main/default/objects/Lab_Order_Panel__c/fields/Fulfillment_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order Product</label>
    <referenceTo>FulfillmentOrderLineItem</referenceTo>
    <relationshipName>Lab_Order_Details</relationshipName>
    <type>Lookup</type>
</CustomField>