force-app/main/default/objects/Lab_Order_Panel__c/fields/HRA_Req__c.field-meta.xml
<CustomField>
    <fullName>HRA_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HRA_Req</label>
    <type>Checkbox</type>
</CustomField>