force-app/main/default/objects/Lab_Order_Panel__c/fields/Lab_Order__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order__c</fullName>
    <label>Lab Order</label>
    <referenceTo>Lab_Order__c</referenceTo>
    <relationshipName>Lab_Order_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>