force-app/main/default/objects/Lab_Order_Panel__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel</label>
    <referenceTo>Panel__c</referenceTo>
    <relationshipName>Lab_Order_Details</relationshipName>
    <type>Lookup</type>
</CustomField>