force-app/main/default/objects/Lab_Order_Panel__c/fields/Panel_Code__c.field-meta.xml
<CustomField>
    <fullName>Panel_Code__c</fullName>
    <formula>Panel__r.Panel_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Code</label>
    <type>Text</type>
</CustomField>