force-app/main/default/objects/Lab_Order_Panel__c/fields/Panel_Price__c.field-meta.xml
<CustomField>
    <fullName>Panel_Price__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Panel Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>