force-app/main/default/objects/Lab_Order_Panel__c/fields/Performing_Site__c.field-meta.xml
<CustomField>
    <fullName>Performing_Site__c</fullName>
    <formula>IF(Lab_Order__r.Is_Kit__c , Lab_Order__r.Kit_Detail__r.PerformingSite__c ,IF( Lab_Order__r.Is_Partner__c, IF(ISBLANK(Panel__r.Product__r.performingSite__c),&apos;PHP&apos;,Panel__r.Product__r.performingSite__c) ,Fulfillment_Order_Product__r.PerformingSite__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performing Site</label>
    <type>Text</type>
</CustomField>