force-app/main/default/objects/Lab_Order_Panel__c/fields/Questionnaire_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Questionnaire Submitted</label>
    <type>Checkbox</type>
</CustomField>