force-app/main/default/objects/Lab_Order_Panel__c/fields/Resulting_Required__c.field-meta.xml
<CustomField>
    <fullName>Resulting_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Resulting Required</label>
    <type>Checkbox</type>
</CustomField>