force-app/main/default/objects/Lab_Order_Panel__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <formula>IF( Lab_Order__r.Is_Kit__c , Lab_Order__r.Kit_Detail__r.Type__c ,IF( Lab_Order__r.Is_Partner__c , IF(ISBLANK(Panel__r.Product__r.testType__c) ,&apos;PSC&apos;,Panel__r.Product__r.testType__c),Fulfillment_Order_Product__r.Test_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Type</label>
    <type>Text</type>
</CustomField>