force-app/main/default/objects/Lab_Order_Panel__c/fields/Total_Number_of_Tests__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Tests__c</fullName>
    <label>Total Number of Tests</label>
    <summaryForeignKey>Lab_Panel_Test__c.Lab_Order_Panel__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>