force-app/main/default/objects/Lab_Order_Panel__c/fields/Total_Resulted_Tests__c.field-meta.xml
<CustomField>
    <fullName>Total_Resulted_Tests__c</fullName>
    <label>Total Resulted Tests</label>
    <summaryFilterItems>
        <field>Lab_Panel_Test__c.Status__c</field>
        <operation>equals</operation>
        <value>Results Ready</value>
    </summaryFilterItems>
    <summaryForeignKey>Lab_Panel_Test__c.Lab_Order_Panel__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>